--- a/src/App.css
+++ b/src/App.css
@@ -22,3 +22,16 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+.repos-table {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 50px;
+  border: 1px #000 solid;
+
+}
+
+.repos-table th,
+.repos-table td {
+  padding:10px;
+}
