--- a/src/App.css
+++ b/src/App.css
@@ -39,10 +39,19 @@
 
 .repos-table td {
     text-align: left;
-    padding: 10px 20px;
     border: 1px #000 solid;
 }
 
+.repos-table td div {
+    resize: horizontal;
+    overflow: auto;
+    margin: 0px;
+    padding: 10px 20px;
+    display:block;
+    border: 0;
+    width: auto;
+    height: auto;
+}
 
 .search-box {
     margin-top: 15px;
