--- a/src/App.css
+++ b/src/App.css
@@ -4,14 +4,18 @@
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+  height: 40px;
 }
 
 .App-header {
   background-color: #222;
-  height: 150px;
-  padding: 20px;
+  height: 75px;
+  padding: 10px;
   color: white;
+}
+
+.App-header h2 {
+    font-size: 0.75em;
 }
 
 .App-intro {
@@ -29,7 +33,8 @@
     margin-left: auto;
     margin-right: auto;
     border: 1px #000 solid;
-    border-collapse: collapse
+    border-collapse: collapse;
+    max-width: 1000px;
 }
 
 .repos-table th {
@@ -56,4 +61,15 @@
 .search-box {
     margin-top: 15px;
     margin-bottom: 15px;
+}
+
+.repos-graph {
+    margin: 15px;
+    max-width: 1000px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.legend span {
+    display: inline-block;
 }
